📚 Docs: update answer, information api docs regenerate api docs
