# pup_patrol_backend/app/Http/Controllers/InformationController.php
@@ -42,7 +42,7 @@ class InformationController extends Controller
  *     path="/api/informations",
  *     tags={"information"},
  *     summary="informations 테이블에 데이터 추가",
- *     description="informations 테이블에 데이터를 추가함",
+ *     description="(admin 계정만 가능) informations 테이블에 데이터를 추가함",
  *     @OA\RequestBody(
  *         @OA\MediaType(
  *             mediaType="application/json",
@@ -60,7 +60,8 @@ class InformationController extends Controller
  *             )
  *         )
  *     ),
- *     @OA\Response(response="201", description="information이 성공적으로 추가됨")
+ *     @OA\Response(response="201", description="information이 성공적으로 추가됨"),
+ *     @OA\Response(response="401", description="관리자 계정이 아닌 경우")
  * )
  **/
     public function store(StoreInformationRequest $request)
@@ -93,20 +94,12 @@ class InformationController extends Controller
         return response()->json(['data'=>new InformationResource(Information::findOrFail($information->id))],200);
     }
 
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(Information $information)
-    {
-        //
-    }
-
     /** 
- * @OA\put(
+ * @OA\patch(
  *     path="/api/informations/{information}",
  *     tags={"information"},
  *     summary="information데이터 수정",
- *     description="한 개의 information데이터를 수정함 ",
+ *     description="(admin 계정만 가능) 한 개의 information데이터를 수정함 ",
  *     @OA\Parameter(
  *          name="information",
  *          description="information의 아이디",
@@ -132,7 +125,48 @@ class InformationController extends Controller
  *          )
  *      )
  * ),
- *     @OA\Response(response="200", description="수정이 된 경우")
+ *     @OA\Response(response="200", description="수정이 된 경우"),
+ *     @OA\Response(response="401", description="관리자 계정이 아닌 경우")
+ * )
+ **/
+    public function edit(Information $information)
+    {
+        //
+    }
+
+    /** 
+ * @OA\put(
+ *     path="/api/informations/{information}",
+ *     tags={"information"},
+ *     summary="information데이터 수정",
+ *     description="(admin 계정만 가능) 한 개의 information데이터를 수정함 ",
+ *     @OA\Parameter(
+ *          name="information",
+ *          description="information의 아이디",
+ *          in="path",
+ *          required=true,
+ *          example="1",
+ *          @OA\Schema(type="string")
+ *     ),
+ *      @OA\RequestBody(
+ *          @OA\MediaType(
+ *          mediaType="application/json",
+ *          @OA\Schema(
+ *                @OA\Property(property="informationDogName", type="string", description="강아지 이름", example="골든 리트리버" ),
+ *                 @OA\Property(property="informationDogCharacter", type="string", description="강아지 성격", example="온화하고 영리함" ),
+ *                 @OA\Property(property="informationMinSize", type="int", description="평균 사이즈 범위의 시작 값", example="56" ),
+ *                 @OA\Property(property="informationMaxSize", type="int", description="평균 사이즈 범위의 끝 값", example="61" ),
+ *                 @OA\Property(property="informationMinCost", type="int", description="평균 분양가 범위의 시작 값", example="25" ),
+ *                 @OA\Property(property="informationMaxCost", type="int", description="평균 분양가 범위의 끝 값 ", example="80" ),
+ *                 @OA\Property(property="informationDogText", type="string", description="강아지 설명", example="골든 리트리버는 온화하며 특히 순종적이고 영리합니다. 사람에게 부드럽고 우호적입니다." ),
+ *                 @OA\Property(property="informationDogGeneticillness", type="string", description="유전병 정보", example="고관절 이형성증, 백내장, 암" ),
+ *                 @OA\Property(property="informationCaution", type="string", description="주의사항", example="사람에게는 착하지만, 다른 개들에게는 사나울 수 있습니다." ),
+ *                 @OA\Property(property="informationImageName", type="string", description="이미지 파일 이름", example="Golden Retriever.png")
+ *          )
+ *      )
+ * ),
+ *     @OA\Response(response="200", description="수정이 된 경우"),
+ *     @OA\Response(response="401", description="관리자 계정이 아닌 경우")
  * )
  **/
     public function update(UpdateInformationRequest $request, Information $information)
@@ -155,7 +189,8 @@ class InformationController extends Controller
  *          example="1",
  *          @OA\Schema(type="json")
  *     ),
- *     @OA\Response(response="200", description="information 삭제에 성공한 경우")
+ *     @OA\Response(response="200", description="information 삭제에 성공한 경우"),
+ *     @OA\Response(response="401", description="관리자 계정이 아닌 경우")
  * )
  **/
     public function destroy(Information $information)
