# pup_patrol_backend/storage/api-docs/api-docs.json
@@ -24,7 +24,7 @@
                     "answer"
                 ],
                 "summary": "answers 테이블에 데이터 추가",
-                "description": "answers 테이블에 데이터를 추가함",
+                "description": "(admin 계정만 가능) answers 테이블에 데이터를 추가함",
                 "operationId": "a1aa30cc6ce16b56a43129192929677d",
                 "requestBody": {
                     "content": {
@@ -80,6 +80,9 @@
                 "responses": {
                     "201": {
                         "description": "answer이 성공적으로 추가됨"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             }
@@ -115,7 +118,7 @@
                     "answer"
                 ],
                 "summary": "answer데이터 수정",
-                "description": "한 개의 answer데이터를 수정함 ",
+                "description": "(admin 계정만 가능) 한 개의 answer데이터를 수정함 ",
                 "operationId": "a05c164fa352557a2b9b1a4731b83dec",
                 "parameters": [
                     {
@@ -183,6 +186,9 @@
                 "responses": {
                     "200": {
                         "description": "수정이 된 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             },
@@ -191,7 +197,7 @@
                     "answer"
                 ],
                 "summary": "특정 answer 데이터 삭제",
-                "description": "하나의 answer을 삭제함",
+                "description": "(admin 계정만 가능) 하나의 answer을 삭제함",
                 "operationId": "1b089cc5726da63ca5e602bb4dab798c",
                 "parameters": [
                     {
@@ -208,6 +214,88 @@
                 "responses": {
                     "200": {
                         "description": "answer 삭제에 성공한 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "answer"
+                ],
+                "summary": "answer데이터 수정",
+                "description": "(admin 계정만 가능) 한 개의 answer데이터를 수정함 ",
+                "operationId": "ec06a3d3751e7f274dc116ec0f957169",
+                "parameters": [
+                    {
+                        "name": "answer",
+                        "in": "path",
+                        "description": "answer의 아이디",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "answerIsBig": {
+                                        "description": "대형견 인지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 (1:True,  1이 아닌 모든 숫자:False, 0은 인식 못 함)"
+                                    },
+                                    "answerIsFluff": {
+                                        "description": "장묘종인지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsWalking": {
+                                        "description": "운동이 많이 필요한지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsSmart": {
+                                        "description": "지능이 높은 편인지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsShyness": {
+                                        "description": "낯가림이 심한지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsBiting": {
+                                        "description": "입질이 심한지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsNuisance": {
+                                        "description": "치명적인 유전병이 있는지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    },
+                                    "answerIsIndependent": {
+                                        "description": "독립심이 있는지 아닌지",
+                                        "type": "boolean",
+                                        "example": " 1 or 5 "
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "수정이 된 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             }
@@ -263,6 +351,21 @@
                 }
             }
         },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "현재 로그인된 유저정보를 반환함",
+                "description": "유저의 name, profile_picture, email, role, birthday 를 반환함",
+                "operationId": "c77423552721cb43e8dbe72a099cf918",
+                "responses": {
+                    "200": {
+                        "description": "success"
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "tags": [
@@ -311,6 +414,21 @@
                 "responses": {
                     "200": {
                         "description": "회원가입이 성공적으로 완료됨"
+                    }
+                }
+            }
+        },
+        "/sanctum/csrf-cookie": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "csrf 토큰을 발급함",
+                "description": "이 경로로 요청을 보내서 csrf 쿠키를 받은 후, httpOnly 쿠키로 저장하면 됨",
+                "operationId": "752d421fc8b3188f0b69d80fc120681f",
+                "responses": {
+                    "204": {
+                        "description": "success"
                     }
                 }
             }
@@ -475,6 +593,55 @@
                 "responses": {
                     "200": {
                         "description": "comment 삭제에 성공한 경우"
+                    },
+                    "401": {
+                        "description": "로그인된 정보와 댓글 작성자가 일치하지 않을 경우"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "comment"
+                ],
+                "summary": "comment 데이터 수정",
+                "description": "로그인 한 정보와 댓글 작성자가 같다면 comment 데이터를 수정함 ",
+                "operationId": "2f82e3c15a5118051615b859ad80d443",
+                "parameters": [
+                    {
+                        "name": "comment",
+                        "in": "path",
+                        "description": "comment의 아이디",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "commentPostId": {
+                                        "description": "댓글이 달린 게시글 id",
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "commentContent": {
+                                        "description": "댓글 내용",
+                                        "type": "string",
+                                        "example": "안녕하세요"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "수정이 된 경우"
                     },
                     "401": {
                         "description": "로그인된 정보와 댓글 작성자가 일치하지 않을 경우"
@@ -658,6 +825,66 @@
                         "description": "본인의 반려견이 아님"
                     }
                 }
+            },
+            "patch": {
+                "tags": [
+                    "dog"
+                ],
+                "summary": "반려견 데이터 수정",
+                "description": "파라미터로 넘어온 id가 로그인 한 사람이 등록한 반려견이 맞다면 반려견의 데이터를 수정함 ",
+                "operationId": "7a85bf04300420fd17b992089f1b602b",
+                "parameters": [
+                    {
+                        "name": "dag",
+                        "in": "path",
+                        "description": "반려견의 아이디",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "dogName": {
+                                        "description": "반려견 이름",
+                                        "type": "string",
+                                        "example": "뽀삐"
+                                    },
+                                    "dogBreed": {
+                                        "description": "반려견의 종",
+                                        "type": "string",
+                                        "example": "푸들"
+                                    },
+                                    "dogBirthDate": {
+                                        "description": "반려견의 생일",
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "2024-3-2"
+                                    },
+                                    "dogPhotoName": {
+                                        "description": "api/imageUpload 의 응답으로 나온 파일명",
+                                        "type": "string",
+                                        "example": "172834_뽀삐사진.jpg"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "수정이 된 경우"
+                    },
+                    "401": {
+                        "description": "본인의 반려견이 아님"
+                    }
+                }
             }
         },
         "/api/imageUpload": {
@@ -791,7 +1018,7 @@
                     "information"
                 ],
                 "summary": "informations 테이블에 데이터 추가",
-                "description": "informations 테이블에 데이터를 추가함",
+                "description": "(admin 계정만 가능) informations 테이블에 데이터를 추가함",
                 "operationId": "feb3c3058246ec9741b13229ab864342",
                 "requestBody": {
                     "content": {
@@ -857,6 +1084,9 @@
                 "responses": {
                     "201": {
                         "description": "information이 성공적으로 추가됨"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             }
@@ -892,7 +1122,7 @@
                     "information"
                 ],
                 "summary": "information데이터 수정",
-                "description": "한 개의 information데이터를 수정함 ",
+                "description": "(admin 계정만 가능) 한 개의 information데이터를 수정함 ",
                 "operationId": "ffa6dbb2fd63839551ae39b0be320a43",
                 "parameters": [
                     {
@@ -970,6 +1200,9 @@
                 "responses": {
                     "200": {
                         "description": "수정이 된 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             },
@@ -995,6 +1228,98 @@
                 "responses": {
                     "200": {
                         "description": "information 삭제에 성공한 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "information"
+                ],
+                "summary": "information데이터 수정",
+                "description": "(admin 계정만 가능) 한 개의 information데이터를 수정함 ",
+                "operationId": "1ee7f4acfe85e06b97bd9e0b1e7a7e4c",
+                "parameters": [
+                    {
+                        "name": "information",
+                        "in": "path",
+                        "description": "information의 아이디",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "informationDogName": {
+                                        "description": "강아지 이름",
+                                        "type": "string",
+                                        "example": "골든 리트리버"
+                                    },
+                                    "informationDogCharacter": {
+                                        "description": "강아지 성격",
+                                        "type": "string",
+                                        "example": "온화하고 영리함"
+                                    },
+                                    "informationMinSize": {
+                                        "description": "평균 사이즈 범위의 시작 값",
+                                        "type": "integer",
+                                        "example": "56"
+                                    },
+                                    "informationMaxSize": {
+                                        "description": "평균 사이즈 범위의 끝 값",
+                                        "type": "integer",
+                                        "example": "61"
+                                    },
+                                    "informationMinCost": {
+                                        "description": "평균 분양가 범위의 시작 값",
+                                        "type": "integer",
+                                        "example": "25"
+                                    },
+                                    "informationMaxCost": {
+                                        "description": "평균 분양가 범위의 끝 값 ",
+                                        "type": "integer",
+                                        "example": "80"
+                                    },
+                                    "informationDogText": {
+                                        "description": "강아지 설명",
+                                        "type": "string",
+                                        "example": "골든 리트리버는 온화하며 특히 순종적이고 영리합니다. 사람에게 부드럽고 우호적입니다."
+                                    },
+                                    "informationDogGeneticillness": {
+                                        "description": "유전병 정보",
+                                        "type": "string",
+                                        "example": "고관절 이형성증, 백내장, 암"
+                                    },
+                                    "informationCaution": {
+                                        "description": "주의사항",
+                                        "type": "string",
+                                        "example": "사람에게는 착하지만, 다른 개들에게는 사나울 수 있습니다."
+                                    },
+                                    "informationImageName": {
+                                        "description": "이미지 파일 이름",
+                                        "type": "string",
+                                        "example": "Golden Retriever.png"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "수정이 된 경우"
+                    },
+                    "401": {
+                        "description": "관리자 계정이 아닌 경우"
                     }
                 }
             }
